manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bugzilla
  namespace: bugzilla
  labels:
    app.kubernetes.io/name: bugzilla
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bugzilla
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
